  (In this case the addon can allready be translated to other languages)
- Added Transcode & Burning menu to Expert-Mode
- Added dvd-mpeg2.sh to svn. 
- Added User-Shell Functions menu to Expert-Mode.
- Print release version inside the log.
- Print mutch more logs if verbose mode is active.
- Prevent that user-uid 0 (root) can execute the shell-scripts.
- Create ssh-folder with setup.sh
- All commands that are executed over ssh are storend inside $HOME/swiss.army.knife/ssh/output
- Added dvd-mkv.sh to svn 
- Integrate dvd-mkv.sh into addon
- Added dvd-low.sh to svn
- First translation folder added German
- Translated germans strings.xml and descriptions for addon.xml
- Added French to addon (thanks to dekani from xbmc.org forum)
- Replace makemkv 1.5.8 with version 1.6.0 (32 and 64 bits)
- Change setup.sh for makemkv 1.6.0
- Added directorys /dvdrip/portable/ip and /dvdrip/portable/psp
  into settings and strings.xml
- Added dvd-iphone.sh to svn
- Addes dvd-psp.sh to svn 
- Integrate dvd-iphone.sh and dvd-psp.sh into addon
- Code cleaning 
- Added deinstall.sh to svn
- Added first steps in README.Linux 
- Folder tools added to svn
- Check that bluray-functions are set in the case a usr
  wish to transcode all dvd's to mkv.
- Integrate makemkv 1.6.1 for 32 bit into setup.sh 
- Checked 1.6.1 for 64 bit 

Fixes:

- Until we have a Release Candidate the verbose flag will be set default to on.
- Language-ID for network windows were wrong (fixed).
- Range for Network messages moved.
- same error-level for all shell-scripts "tool not found"
- Typo inside shell-scripts.
- Test if we use makemkvcon inside a script that the command is running.
- Typo inside dvd-handbrake.sh / text about passes fixed.
- In the case the +x attribut for the shell-scripts is not set, we set them for 
  all shell-scripts.
- Linebreaks for longer text inside dialog.ok function is needed.
- it seems that makemkv 1.6.0 had a few problems .... I to test version 1.6.1


 
 


